infrastructure/bootstrap/namespace/kafka-system/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: mrun-kafka-system
  labels:
    name: mrun-kafka-system
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
