infrastructure/bootstrap/namespace/kafka-system/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-all-internal
  namespace: mrun-kafka-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
